@@ -1,0 +1,2 @@
+class Apartamento < ActiveRecord::Base
+end
