@@ -1,0 +1,15 @@
+<h1>New apartamento</h1>
+
+<% form_for(@apartamento) do |f| %>
+  <%= f.error_messages %>
+
+  <p>
+    <%= f.label :num %><br />
+    <%= f.text_field :num %>
+  </p>
+  <p>
+    <%= f.submit "Create" %>
+  </p>
+<% end %>
+
+<%= link_to 'Back', apartamentos_path %>
