@@ -1,0 +1,22 @@
+<h1>Listing reservas</h1>
+
+<table>
+  <tr>
+    <th>Dataentrada</th>
+    <th>Datasaida</th>
+  </tr>
+
+<% for reserva in @reservas %>
+  <tr>
+    <td><%=h reserva.dataEntrada %></td>
+    <td><%=h reserva.dataSaida %></td>
+    <td><%= link_to 'Show', reserva %></td>
+    <td><%= link_to 'Edit', edit_reserva_path(reserva) %></td>
+    <td><%= link_to 'Destroy', reserva, :confirm => 'Are you sure?', :method => :delete %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<%= link_to 'New reserva', new_reserva_path %>
