@@ -2,6 +2,7 @@
 <% end %>
 
 
+<p><%= link_to 'Apartamentos', :controller => "apartamentos", :action => "index" %></p>
 <p><%= link_to 'Hospedes', :controller => "hospedes", :action => "index" %></p>
 <p><%= link_to 'Reservas', :controller => "reservas", :action => "index" %></p>
 <p><%= link_to 'Tipos de apartamentos', :controller => "tipos_apartamentos", :action => "index" %></p>
