@@ -1,4 +1,8 @@
 2009-05-04 Iuri Fernandes <iurifq@gmail.com>
+* Created  scaffolding for apartamento.
+* Added forgotten files from reserva.
+
+2009-05-04 Iuri Fernandes <iurifq@gmail.com>
 * Created  scaffolding for reservas. It's necessary to alter tipoAp and hosp in new reserva form.
 
 2009-05-04 Iuri Fernandes <iurifq@gmail.com>
